# d3dmetal-native

./: .gitignore  LICENSE  README.md  build-macos-x86_64.txt  meson.build  meson.options
include/: d3dmetal_native.h
include/native/windows/: unknwn.h  windows_base.h
src/: d3dmetal_gfxt.h  dmn_com_hooks.cpp  dmn_d3d12_up.h  dmn_directx_types.h  dmn_fence.cpp  dmn_fence.h  dmn_fence_d3d.cpp  dmn_fence_d3d.h  dmn_formats.h  dmn_formats.mm  dmn_gfxt.h  dmn_gfxt_adapter.mm  dmn_gfxt_allocation.cpp  dmn_gfxt_event.cpp  dmn_gfxt_library.cpp  dmn_gfxt_monitor.cpp  dmn_gfxt_os.cpp  dmn_gfxt_path.cpp  dmn_gfxt_registry.cpp  dmn_gfxt_swapchain.mm  dmn_hook.h  dmn_init.cpp  dmn_kmtx.cpp  dmn_kmtx.h  dmn_log.cpp  dmn_log.h  dmn_private.h  dmn_share.h  dmn_share_metal.mm  dmn_window.mm  dmn_window_internal.h  exports.symbols
tests/: abi_check_test.cpp  callback_embedder.h  callback_embedder.mm  callback_swapchain_test.cpp  cocoa_window.h  cocoa_window.mm  d3d11_cube.cpp  d3d11_sharedbuf_test.cpp  d3d11_triangle.cpp  d3d11_variants_test.cpp  d3d12_fence_test.cpp  d3d12_sharedbuf_test.cpp  d3d12_triangle.cpp  dmn_device_test.cpp  dmn_smoke.c  event_api_test.cpp  evict_contract_test.cpp  exported_swapchain_test.cpp  fence_events_test.cpp  fence_gpuwait_test.cpp  fence_xapi_test.cpp  format_caps_test.cpp  heap_placed_test.cpp  keyed_mutex_test.cpp  lifecycle_churn_test.cpp  meson.build  mt_stress_test.cpp  shared_compute_triangle.cpp  shared_contract_test.cpp  shared_open_preserve_test.cpp  shared_reexport_test.cpp  shared_srv_sample_test.cpp  shared_texture_test.cpp
tests/common/: check.h  com.h  dx11.h  dx12.h  ipc.h  util.h
